--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eddy Website</title>
+    <link rel="shortcut icon" href="./images/logo.png">
 
     <!-- Google Fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="shortcut icon" href="./images/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e0098116ea.js" crossorigin="anonymous"></script>
@@ -40,8 +40,7 @@
                     <img src="./images/bgc-10.jpg" alt="classroom background image">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Scratch Programming for Kids</span>
-                    <a href="#" class="blog-title">Introducing Primary Students to the World of Coding with Scratch</a>
+                    <span>Introducing Primary Students to the World of Coding with Scratch</span>
                     <p>
                         This week, our young learners took their first steps into the world of programming through
                         Scratch. Scratch is a visual programming language developed by MIT that makes it fun and easy
@@ -52,51 +51,24 @@
                         their projects with the class.
                     </p>
 
-                    <b class="read-more">Read More</b><br>
+                    <b class="read-more">Read More</b>
                     <span class="read-little">Read Less</span>
                 </div>
             </div>
-
-
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="./images/bgc-6.png" alt="">
+                    <img src="./images/bgc-5.png" alt="cat and me">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
+                    <span>A Moment of Connection: Human and Cat Bonding</span>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
-                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
-                        ab,
-                        possimus odit animi maxime nam deleniti!
-                    </p>
-
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="./images/bgc-11.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
-                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
-                        ab,
-                        possimus odit animi maxime nam deleniti!
+                        Exploring the wonders of the natural world, we often find ourselves immersed in the intricate
+                        dance of ecosystems. From the majestic flight of eagles soaring high above the mountain peaks to
+                        the delicate balance of a coral reef teeming with life, the beauty and complexity of nature is
+                        unparalleled. It teaches us about resilience and coexistence, reminding us that every creature
+                        plays a pivotal role in the tapestry of life. As we venture into the wild, let's remember to
+                        protect and cherish these environments, ensuring they continue to inspire and nurture
+                        generations to come.
                     </p>
 
                     <b class="read-more">Read More</b><br>
@@ -105,20 +77,38 @@
             </div>
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="./images/bgc-12.png" alt="">
+                    <img src="./images/bgc-11.png" alt="A Moment of Connection: Human and Raccoon Bonding">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
+                    <span>A Moment of Connection: Human and Raccoon Bonding</span>
+
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
-                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
-                        ab,
-                        possimus odit animi maxime nam deleniti!
+                        In the quiet corner of a cozy sanctuary, a human and a raccoon share a gentle moment, bridging
+                        the gap between species with a simple act of kindness. The raccoon, with its bandit-masked eyes,
+                        gazes curiously at the human offering a treat, a silent communication of trust and acceptance
+                        passing between them. This encounter, a testament to the peaceful coexistence possible between
+                        humans and wildlife, reminds us of the delicate bonds that we can form with all living
+                        creatures. It's a poignant reminder of our role as stewards of the earth, responsible for
+                        nurturing the delicate threads that connect us to the natural world.
+                    </p>
+
+                    <b class="read-more">Read More</b><br>
+                    <span class="read-little">Read Little</span>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="./images/bgc-4.png" alt="Tranquil Moments: A Meerkat's Gentle Repose">
+                </div>
+                <div class="blog-text">
+                    <span>Tranquil Moments: A Meerkat's Gentle Repose</span>
+                    <p>
+                        In the soft embrace of a serene environment, a meerkat finds comfort and relaxation in the
+                        gentle touch of a human friend. This tender scene captures the meerkat in a state of peaceful
+                        repose, its eyes half-closed and its body at ease, fully trusting in the moment. The quiet
+                        companionship they share speaks volumes about the calm assurance that a kind gesture can provide
+                        to even the smallest of creatures. As the meerkat lies contentedly, we're reminded of the simple
+                        yet profound connection that kindness can foster across all walks of life.
                     </p>
 
                     <b class="read-more">Read More</b><br>
@@ -130,74 +120,15 @@
                     <img src="./images/bgc-8.png" alt="">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
+                    <span>Sharing a Moment with a Fox</span>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
-                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
-                        ab,
-                        possimus odit animi maxime nam deleniti!
-                    </p>
-
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img width="500" src="./images/bgc-2.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
-                    </p>
-
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img width="500" src=" ./images/bgc-4.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
-                    </p>
-
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img width="500" src="./images/bgc-5.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
+                        Inside the warm, ambient glow of an indoor haven, a young individual stands with an outstretched
+                        hand, offering a treat to a fox whose gaze is locked in anticipation. This exchange, a rare and
+                        heartwarming interaction, symbolizes the subtle dialogue that can occur between humans and
+                        wildlife. The fox, with its sharp, attentive eyes and poised ears, approaches cautiously yet
+                        with a sense of curiosity, reflecting a world where the wild and the tame gently converge. It's
+                        moments like these that capture the beauty of interspecies communication and the potential for
+                        understanding and respect that can grow from such encounters.
                     </p>
 
                     <b class="read-more">Read More</b><br>
@@ -209,20 +140,19 @@
                     <img width="500" src="./images/bgc-3.png" alt="">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
-                    </p>
-
+                    <span>A Quiet Bond with a piglets</span>
+                    <p> In the cozy confines of a sheltered space, a person sits in contemplation, cradling a young goat
+                        in a moment of silent kinship. The goat, nestled comfortably in the person's lap, enjoys the
+                        warmth and security that comes from a caring touch. This scene is a testament to the gentle and
+                        nurturing connections that can form between humans and animals, transcending the barriers of
+                        species. It's a reminder of the comfort and peace that compassionate care can bring to the most
+                        innocent of creatures, creating a haven of trust and mutual respect.</p>
                     <b class="read-more">Read More</b><br>
                     <span class="read-little">Read Little</span>
                 </div>
             </div>
+
+        </div>
 
     </section>
 
