--- a/skill.html
+++ b/skill.html
@@ -12,7 +12,7 @@
     <!-- Google Fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e0098116ea.js" crossorigin="anonymous"></script>
@@ -36,7 +36,7 @@
 
         <div class="inner">
             <div class="skill-header">
-                <h1>My page used Skill</h1>
+                <h1>Used Techniques</h1>
             </div>
             <div class="skill-container">
                 <div class="skill-box">
